--- a/src/app/dialog/dialog.component.html
+++ b/src/app/dialog/dialog.component.html
@@ -1,11 +1,18 @@
 <mat-dialog-content>
     <!-- A WIN na -->
-    <div style="display: flex;">
-        <div>
-            <h2>WINNER IS </h2>
-            <div style="width: 20vh; height: 20vh;">
-                <img src="{{this.data?.URL1}}" alt="" width="100%" height="100%">
+    <div style="display: flex; width: 100%;" *ngIf="data.Win == 1">
+        <div style=" padding-right: 2%; padding-left: 2%; border-radius: 10px; width: 25vw; margin-right: 5vw;  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5); ">
+            <h2 style="width: 100%; display: flex; justify-content:  center;">WINNER IS </h2>
+            <div style="width: 100%; display: flex; justify-content:  center;">
+                
+                <div style="width: 20vh; height: 20vh; 
+                background-image: url({{this.data?.URL1}});
+                background-position: center;
+                background-size: cover;
+                ">
+                </div>
             </div>
+         
             
             <p>{{ this.data?.cala }}</p>
             <p>rating :{{this.data?.ra}}</p>
@@ -15,10 +22,16 @@
            
         </div>
     
-        <div>
-            <h2>LOSERR IS </h2>
-            <div style="width: 20vh; height: 20vh;">
-                <img src="{{this.data?.URL2}}" alt="" width="100%" height="100%">
+        <div style="width: 25vw; border-radius: 10px; padding-right: 2%; padding-left: 2%; box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5); ">
+            <h2 style=" width: 100%; display: flex; justify-content:  center;">LOSER IS </h2>
+            <div style="  width: 100%; display: flex; justify-content:  center;">
+                
+                <div style="width: 20vh; height: 20vh; 
+                background-image: url({{this.data?.URL2}});
+                background-position: center;
+                background-size: cover;
+                ">
+                </div>
             </div>
             
             <p>{{ this.data?.calb }}</p>
@@ -32,12 +45,18 @@
     
     <!-- B WIN -->
 
-    <div style="display: flex;">
-        <div>
-            <h2>WINNER IS </h2>
-            <div style="width: 20vh; height: 20vh;">
-                <img src="{{this.data?.URL2}}" alt="" width="100%" height="100%">
+    <div style="display: flex;" *ngIf="data.Win == 2">
+        <div style=" padding-right: 2%; padding-left: 2%; border-radius: 10px; width: 25vw; margin-right: 5vw;  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);">
+            <h2 style="width: 100%; display: flex; justify-content:  center;">WINNER IS </h2>
+            <div style="width: 100%; display: flex; justify-content:  center;">
+                <div style="width: 20vh; height: 20vh; 
+                background-image: url({{this.data?.URL2}});
+                background-position: center;
+                background-size: cover;
+                ">
+                </div>
             </div>
+           
             
             <p>{{ this.data?.calb }}</p>
             <p>rating :{{this.data?.rb}}</p>
@@ -47,11 +66,17 @@
             
         </div>
     
-        <div>
-            <h2>LOSERR IS </h2>
-            <div style="width: 20vh; height: 20vh;">
-                <img src="{{this.data?.URL1}}" alt="" width="100%" height="100%">
+        <div style="width: 25vw; border-radius: 10px; padding-right: 2%; padding-left: 2%; box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5); ">
+            <h2 style=" width: 100%; display: flex; justify-content:  center;">LOSERR IS </h2>
+            <div style="width: 100%; display: flex; justify-content:  center;">
+                <div style="width: 20vh; height: 20vh; 
+                background-image: url({{this.data?.URL1}});
+                background-position: center;
+                background-size: cover;
+                ">
+                </div>
             </div>
+            
             
             <p>{{ this.data?.cala }}</p>
             <p>rating :{{this.data?.ra}}</p>
