--- a/src/app/components/all-user/all-user.component.html
+++ b/src/app/components/all-user/all-user.component.html
@@ -1,11 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body style="background-color: #f5f5ef">
+    <nav>
+      <div class="innav">
+        <div style="width: 15%; height: 10%">
+          <img
+            src="../../../assets/img/logo-modified.png"
+            alt=""
+            width="100%"
+            height="100%"
+          />
+        </div>
+        <div style="font-size: 2vw; font-weight: bolder">Admin : Killau</div>
+        <div class="img" style="background-image: url('{{ img }}');"></div>
+      </div>
+      <div class="btn">
+        <div style="width: 90%; display: flex; justify-content: space-between">
+          <a class="a1" href="">
+            <div class="ina">STATUS</div>
+          </a>
+
+          <a class="a2" href=""> <div class="ina">STANDING</div></a>
+        </div>
+        <div (click)="logout()" class="logout">
+          <mat-icon
+            style="font-size: 1.8vw"
+            class="login"
+            fontIcon="logout"
+          ></mat-icon>
+        </div>
+      </div>
+    </nav>
+    <div class="title">
+      <div class="inTitle">
+        <h1>ALL USER</h1>
+      </div>
+    </div>
+    <main>
+      <div class="Alllist">
+        <div class="inall">
+          <div *ngFor="let item of users" class="list">
+            <a (click)="next(item.UID)" class="listIMG" style=" background-image: url('{{ item.image }}');"
+            ></a>
+            <div style="width: 35%;">
+              <p>Name : {{item.Firstname}} {{item.Lastname}}</p>
+            </div>
+            <div style="width:  33% ;margin-right: 1.8vw">
+              <p>Email : {{item.Email}}</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
+  </body>
 </html>
