--- a/src/app/components/upload/upload.component.scss
+++ b/src/app/components/upload/upload.component.scss
@@ -173,3 +173,70 @@ nav a{
     background-color: white;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
 }
+.back {
+    width: 15%;
+    display: flex;
+    justify-content: center;
+}
+
+.title {
+    width: 70%;
+    display: flex;
+    justify-content: center;
+}
+
+.back {
+    margin-top: 1.1vw;
+    width: 15%;
+    display: flex;
+    justify-content: center;
+}
+
+.back a {
+    border-radius: 10px;
+    text-decoration: none;
+    margin-top: 2vw;
+    display: flex;
+    align-items: center;
+    padding: 2.8%;
+    color: white;
+    background-color: #513D31;
+    height: 2vw;
+}
+
+.login {
+    font-size: 3vw;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+}
+
+main {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    height: 90%;
+}
+
+.main {
+    display: flex;
+    width: 85%;
+}
+
+.right {
+    width: 50%;
+
+}
+
+.right a {
+    margin-left: 6%;
+    background-color: #513D31;
+    color: white;
+    padding: 1.2%;
+    text-decoration: none;
+    font-size: 1.3vw;
+    border-radius: 10px;
+
+}
