--- a/src/app/components/all-user/all-user.component.html
+++ b/src/app/components/all-user/all-user.component.html
@@ -45,13 +45,20 @@
       <div class="Alllist">
         <div class="inall">
           <div *ngFor="let item of users" class="list">
-            <a (click)="next(item.UID)" class="listIMG" style=" background-image: url('{{ item.image }}');"
+            <a
+              class="listIMG"
+              style=" background-image: url('{{ item.image }}');"
             ></a>
-            <div style="width: 35%;">
-              <p>Name : {{item.Firstname}} {{item.Lastname}}</p>
+            <div style="width: 35%">
+              <p>Name : {{ item.Firstname }} {{ item.Lastname }}</p>
             </div>
-            <div style="width:  33% ;margin-right: 1.8vw">
-              <p>Email : {{item.Email}}</p>
+            <div style="width: 33%; margin-right: 1.8vw">
+              <p>Email : {{ item.Email }}</p>
+            </div>
+          </div>
+          <div style="display: flex; justify-content:  center; align-items: center;">
+            <div *ngFor="let i of count">
+              <div style="margin-right: 2vh;" (click)="page(i)">{{ i }}</div>
             </div>
           </div>
         </div>
