--- a/src/app/components/all-user/all-user.component.html
+++ b/src/app/components/all-user/all-user.component.html
@@ -25,7 +25,7 @@
             <div class="ina">STATUS</div>
           </a>
 
-          <a class="a2" href=""> <div class="ina">STANDING</div></a>
+          <a class="a2" routerLink="/standingAdmin"> <div class="ina">STANDING</div></a>
         </div>
         <div (click)="logout()" class="logout">
           <mat-icon
@@ -45,7 +45,7 @@
       <div class="Alllist">
         <div class="inall">
           <div *ngFor="let item of users" class="list">
-            <a
+            <a routerLink="/userProfile/{{item.UID}}"
               class="listIMG"
               style=" background-image: url('{{ item.image }}');"
             ></a>
@@ -57,7 +57,7 @@
             </div>
           </div>
           <div style="display: flex; justify-content:  center; align-items: center;">
-            <div *ngFor="let i of count">
+            <div *ngFor="let i of count" style="cursor: pointer;">
               <div style="margin-right: 2vh;" (click)="page(i)">{{ i }}</div>
             </div>
           </div>
