--- a/src/app/components/votelogin/votelogin.component.html
+++ b/src/app/components/votelogin/votelogin.component.html
@@ -42,6 +42,10 @@
     </div>
   </div>
 </header>
+
+<div style="display: flex; justify-content: center; align-items: center; margin-top: 1vh;">
+  <mat-icon (click)="show()">settings</mat-icon>
+</div>
 <main>
   <!-- <div class="img1" style="border-radius: 10px; background-image: url({{this.image?.image1}});" (click)="Awin()">
   </div>
@@ -51,9 +55,12 @@
 
   <div class="img1" style="background-image: url({{this.image?.image1}});"(click)="open(1)">
   </div>
+
+
   <h1>OR</h1>
   <div class="img1" style="background-image: url({{this.image?.image2}});"(click)="open(2)">
   </div>
+
 </main>
 
 
